redefined resources path

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div><i class="fas fa-volume-off"></i></div>
         </div>
     </div>
-    <div id="loader"><img src="../images/loader.gif"></img></div>
+    <div id="loader"><img src="images/loader.gif"></img></div>
     
     <div id="game-container"></div>
     <script src="js/main.js"></script>
