--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="main-menu">
         <div id="options">
-            <button class="option-btn" id="quick-play" onclick="_quickPlay()">
+            <button class="option-btn" id="quick-play">
                 <p>Quick Play</p>
             </button>
             <button class="option-btn" id="events">
@@ -37,7 +37,7 @@
     <div id="loader"><img src="images/loader.gif"></img></div>
     
     <div id="game-container"></div>
-    <script src="js/main.js"></script>
-    <script src="js/controller.js"></script>
+    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/controller.js"></script>
 </body>
 </html>
