--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Test Drive</title>
     <!-- <base href = "TestDriveDemo/app" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/vendors/jquery/jquery-3.3.1.min.js"></script>
+    <script src="scripts/ammo/ammo.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
