cleanup, memory optimisation, code separation

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <!-- <base href = "TestDriveDemo/app" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="scripts/ammo/ammo.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"> -->
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
+    <div id="info">
+        Test Drive Game demo, inspired by trigger rally and alteredq<br/>
+        Press A, S, D, W to move the car<br/>
+        Press R to reset the car position and C to change the camera view<br/>
+    </div>
     <div id="main-menu">
         <div id="options">
             <button class="option-btn" id="quick-play">
