--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Test Drive</title>
     <!-- <base href = "TestDriveDemo/app" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <script src="scripts/ammo/ammo.js"></script> -->
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"> -->
-
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body style="margin: 0;">
@@ -42,7 +39,7 @@
     <div id="loader"><img src="images/loader.gif"></img></div>
     
     <div id="game-container"></div>
-    <script type="module" src="js/main.js"></script>
-    <script type="module" src="js/controller.js"></script>
+    <script type="module" src="src/js/main.js"></script>
+    <script type="module" src="src/js/controller.js"></script>
 </body>
 </html>
