--- a/index.html
+++ b/index.html
@@ -4,42 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Test Drive</title>
-    <!-- <base href = "TestDriveDemo/app" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body style="margin: 0;">
-    <div id="info">
-        Test Drive Game demo, inspired by trigger rally and alteredq<br/>
-        Press A, S, D, W to move the car<br/>
-        Press R to reset the car position and C to change the camera view<br/>
-    </div>
-    <div id="main-menu">
-        <div id="options">
-            <button class="option-btn" id="quick-play">
-                <p>Quick Play</p>
-            </button>
-            <button class="option-btn" id="events">
-                <p>Events</p>
-            </button>
-            <button class="option-btn" id="custom-play">
-                <p>Custom Play</p>
-            </button>
-            <button class="option-btn" id="settings">
-                <p>Settings</p>
-            </button>
-            <button class="option-btn" id="about">
-                <p>About</p>
-            </button>
-        </div>
-        <div id="footer-menu">
-            <div><i class="fas fa-volume-off"></i></div>
-        </div>
-    </div>
-    <div id="loader"><img src="images/loader.gif"></img></div>
-    
-    <div id="game-container"></div>
-    <script type="module" src="src/js/main.js"></script>
-    <script type="module" src="src/js/controller.js"></script>
+    <div id="root"></div>
+    <script type="module" src="src/entry.jsx"></script>
 </body>
 </html>
