introduced nextui and added settings panel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="margin: 0;">
-    <div id="root"></div>
+    <div id="root" style="position: absolute; height: 100%; width: 100%; background: aquamarine;"></div>
     <script type="module" src="src/entry.jsx"></script>
 </body>
 </html>
